--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Weather_App</title>
 </head>
 <body>
+    <div class="weather">
+        <div class="card">
+            <div class="search">
+                <input type="text" placeholder="enter city please...">
+            </div>
+        </div>
+    </div>
     
+
+    <script src="app.js"></script>
 </body>
 </html>
