--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <div class="card">
             <div class="search">
                 <input type="text" placeholder="enter city please...">
+                <button><img src="./images/search.png" ></button>
+                
+
+      
             </div>
         </div>
     </div>
