--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="weather">
         <div class="card">
             <div class="search">
-                <input type="text" placeholder="enter city please...">
+                <input type="text" placeholder="Enter city please...">
                 <button><img src="./images/search.png" ></button>
                 
 
