--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <div class="weather">
+        <header>
+
+        </header>
+     <div class="heading">
+        <h1>
+            Daily Weather App
+        </h1>
+     </div>
         <div class="card">
             <div class="search">
                 <input type="text" placeholder="Enter city please...">
